<resources>
    <string name="app_name">Stock Control</string>
    <string name="scan_button">Scan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>

    <string name="stock_in">Stock In</string>
    <string name="product_list">Product List</string>
    <string name="discounts">Discounts</string>
    <string name="product_details">Product Details</string>
    <string name="clock_in">Clock In</string>
    <string name="employee_list">Employee List</string>

    <string name="scan">Scan</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="register_button">Register</string>

    <string name="menu">Menu</string>

    <string name="zizin">Zizin - Apa Plata</string>
    <string name="quantity">2L</string>

    <string name="carrefour">Carrefour</string>
    <string name="number">1 bucata</string>

    <string name="apply_discount">Apply discount</string>
    <string name="price">Price</string>
    <string name="zizin_price_value">5 Lei</string>
    <string name="card_price_value">2 Lei</string>

    <string name="five_percent_discount">5%</string>
    <string name="ten_percent_discount">10%</string>
    <string name="twenty_percent_discount">20%</string>

    <string name="zizin_five_percent_discount">4.75 Lei</string>
    <string name="zizin_ten_percent_discount">4.5 Lei</string>
    <string name="zizin_twenty_percent_discount">4 Lei</string>
    <string name="employee_name_text_view">Employee Name</string>
    <string name="employee_name_example">John Doe</string>
    <string name="employee_role_text_view">Employee Role</string>
    <string name="employee_role_example">Manager</string>
    <string name="employee_code_text_view">Employee Code</string>

    <string name="employee_name">Employee Name</string>
    <string name="employee_role">Employee Role</string>
    <string name="employee_code">Employee Code</string>
    <string name="product_barcode">Product Barcode</string>
    <string name="clock_out_button">Clock Out</string>
    <string name="stock_transfer_button">Stock Transfer</string>
    <string name="stockwatch_button">Stockwatch</string>
    <string name="product_quantity_for_transfer">Quantity for Transfer</string>
    <string name="transfer_button">Transfer</string>
    <string name="to_store">To Store</string>
    <string name="scan_stockwatch">Scan</string>
    <string name="quantity_available">Quantity Available</string>
    <string name="register_quantity_button">Register Quantity</string>
</resources>
