<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_margin="@dimen/text_field_margin"/>

    <TextView
        android:id="@+id/product_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_barcode"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:textColorHint="@color/text_color"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_name"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:textColorHint="@color/text_color"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_quantity"
        android:textColorHint="@color/text_color"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/product_quantity_for_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_quantity_for_transfer"
        android:textColorHint="@color/text_color"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/to_store_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/to_store"
        android:textColorHint="@color/text_color"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>

    <Button android:id="@+id/stock_transfer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_button"
        android:layout_gravity="center"
        android:layout_margin="@dimen/text_field_margin"
        android:background="@color/black"/>

    <ImageView
        android:layout_width="@dimen/navigation_button"
        android:layout_height="@dimen/navigation_button"
        android:src="@drawable/back_button"
        android:layout_weight="1"
        android:id="@+id/back_to_menu"
        android:layout_gravity="center"/>

</LinearLayout>