<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/boxes"
        android:contentDescription="@string/logo"
        android:paddingBottom="@dimen/menu_logo_bottom_padding"
        />

    <Button android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_margin="@dimen/text_field_margin"/>

    <TextView
        android:id="@+id/scan_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_name"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:textColorHint="@color/text_color"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/scan_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_quantity"
        android:textColorHint="@color/text_color"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>

    <Button android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_gravity="center"
        android:layout_margin="@dimen/text_field_margin"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/menu_logo_bottom_padding">

        <ImageView
            android:layout_width="@dimen/navigation_button"
            android:layout_height="@dimen/navigation_button"
            android:src="@drawable/back_button"
            android:layout_weight="1"
            android:id="@+id/back"/>
        <ImageView
            android:layout_width="@dimen/navigation_button"
            android:layout_height="@dimen/navigation_button"
            android:layout_weight="1"
            android:src="@drawable/forward_button"
            android:id="@+id/forward"/>

    </LinearLayout>




</LinearLayout>