<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Discounts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center">

    <Button android:id="@+id/scan_item_for_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_margin="@dimen/text_field_margin"/>

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_name"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:textColorHint="@color/text_color"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_quantity"
        android:textColorHint="@color/text_color"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/price"
        android:textColorHint="@color/text_color"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>


    <Button android:id="@+id/apply_discount_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_discount"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_margin="@dimen/text_field_margin" />

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/navigation_button"
        android:layout_height="@dimen/navigation_button"
        android:src="@drawable/back_button"
        android:layout_weight="1"
        android:id="@+id/back"/>

</LinearLayout>