<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProductDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:gravity="center">

        <Button android:id="@+id/scan_details_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_margin="@dimen/text_field_margin"/>

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_name"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:textColorHint="@color/text_color"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:hint="@string/product_quantity"
        android:textColorHint="@color/text_color"
        android:layout_gravity="center"
        android:background="@color/scan_items_fields"
        android:layout_margin="@dimen/text_field_margin"
        android:textColor="@color/text_color"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_image"
        />
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/navigation_button"
        android:layout_height="0dp"
        android:src="@drawable/back_button"
        android:layout_weight="1"
        android:id="@+id/back"
        />


</LinearLayout>